--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h3>Hello, I am</h3>
             <h1>Bhakti Patrawala</h1>
             <h2>Crafting Data Marvels: Where Insight Meets Innovation</h2>
-            <p>Armed with a Master's degree in Data Science from Indiana University, I fervently navigate the realm of analytics, leveraging statistical prowess, machine learning acumen, and the art of data visualization. My journey commenced as an Associate Software Engineer at Larsen and Toubro Infotech, where I orchestrated transformative technical solutions, optimizing processes and bolstering productivity for offshore oil rig operations. Championing projects like constructing a Psychological Feature Space using Deep Neural Networks and dissecting Twitch Social Network dynamics with precision, I've showcased my prowess in blending advanced analytics with real-world problem-solving. With a robust technical arsenal spanning diverse programming languages, databases, and frameworks, including proficiency in Tableau for captivating data visualizations, I am primed to embark on endeavors that demand innovation, meticulous analysis, and impactful outcomes.</p>
+            <p>Equipped with a Master’s degree in Data Science from Indiana University, I am passionate about data analytics, specializing in data visualization and storytelling. My journey began as an Associate Software Engineer at Larsen and Toubro Infotech, where I optimized processes and enhanced productivity for offshore oil rig operations. Currently, as a Senior Consultant at the Hoosier Community Network (HCN), I lead teams in creating impactful Tableau and Power BI visualizations on various topics related to the state of Indiana, including health, education, business, agriculture, and weather. My work focuses on uncovering actionable insights to help local organizations streamline operations and drive growth. With a strong technical foundation in programming languages, databases, and tools like Alteryx, I am poised to deliver innovative, data-driven solutions that produce meaningful outcomes.</p>
 
             <div class="social-media">
                 
@@ -107,7 +107,7 @@
                 <h1>August 2019 - May 2022</h1>
                 <p> Led initiatives to streamline testing and deployment processes, reducing post-deployment testing time by 87.5% through automation and enhancing operational efficiency by 43% using AGILE methodologies. 
                     Collaborated across teams to resolve critical application bugs, improving stability by 80% and preventing SLA breaches. 
-                    Managed incident resolution, achieving a 93% reduction in application downtime, and guided a team in application testing and automation, ensuring consistent high-quality deployments. </p>
+                    Managed incident resolution, achieving a 93% reduction in application downtime, and guided a team in application testing, ensuring consistent high-quality deployments. </p>
                 <!--<a href="#" class="btn">Read More </a> -->
             </div>
             </div>
