--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
             <div class="services-box">
                 <i class='bx bxl-python'></i>
-                <h3>Associate Software Engineer</h3>
+                <h3>Senior Software Engineer</h3>
                 <h1>Larsen & Toubro Infotech</h1>
                 <h1>August 2019 - May 2022</h1>
                 <p> Led initiatives to streamline testing and deployment processes, reducing post-deployment testing time by 87.5% through automation and enhancing operational efficiency by 43% using AGILE methodologies. 
